# linear_inversion

./: README.md  pyproject.toml  setup.cfg
src/linear_inversion/: __init__.py  l1_norm_inversion.py  least_squares.py  linear_inversion.py  linear_inversion_metrics.py
tests/: __init__.py  conftest.py  test_linear_inversion.py  test_linear_inversion_config.py
tests/test_data/: data_001.csv  l1_m_001.csv  l2_m_001.csv  l2_y_pred_001.csv
