[metadata]
name = Linear Inversion
version = 0.0.1
author = Y. Natsume
author_email = None
description = Creates a linear model with coefficients w = (w_1, …, w_M) to minimize the loss between the data and the predictions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natsunoyuki/linear_inversion
project_urls =
    Bug Tracker = https://github.com/natsunoyuki/linear_inversion/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    numpy
    scipy
    pytest

# Optional installs.
[options.extras_require]
notebook = ipykernel

[options.packages.find]
where = src
